--- a/index.html
+++ b/index.html
@@ -5,10 +5,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./assets/sushi-9.png">
   <link rel="stylesheet" href="./css/styles.css"> 
-  <script src="./js/script.js" defer></script>
-  <title>Sushi Shop</title>
+  <script src="./js/script.js" type="module"></script>
+  <title>King Sushi</title>
 </head>
 <body>
-  
+  <header>
+    <nav class="header__nav">
+      <div class="header__logo">
+        <h4 data-aos="fade-down">King Sushi</h4>
+        <div class="header__logo-overlay"></div>
+      </div>
+
+      <ul class="header__menu" data-aos="fade-down">
+        <li>
+          <a href="#menu">Menu</a>
+        </li>
+        <li>
+          <a href="#food">Food</a>
+        </li>
+        <li>
+          <a href="#services">Services</a>
+        </li>
+        <li>
+          <a href="#about-us">About Us</a>
+        </li>
+        <li>
+          <img src="assets/search.svg" alt="search" />
+        </li>
+      </ul>
+
+      <ul class="header__menu-mobile" data-aos="fade-down">
+        <li>
+          <img src="assets/menu.svg" alt="menu" />
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-image">
+      <img src="./assets/sushi-1.png" alt="sushi" />
+      <h2>
+        日 <br />
+        本 <br />
+        食
+      </h2>
+      <div class="hero-image__overlay">
+
+      </div>
+    </div>
+
+    <div class="hero-content">
+      <div class="hero-content-info">
+        <h1>
+          Eat the most delicious sushi
+        </h1>
+        <p>
+          Feel the taste of the most popular Japanese food from anywhere and anytime.
+        </p>
+
+        <div class="hero-content__buttons">
+          <button class="hero-content__order-button"> Order Now</button>
+          <button class="hero-content__play-button">
+            <img src="./assets/play-circle.svg" alt="play"/>
+            How to Order
+          </button>
+        </div>
+      </div>
+
+      <div class="hero-content__testimonial">
+        <div class="hero-content__customer flex-center">
+          <h4>24<span>k+</span></h4>
+          <p>Happy Customers</p>
+        </div>
+
+        <div class="hero-content__review">
+          <img src="./assets/user.png" alt="user">
+          <p>This is the best Japanese food delivery service that ever existed</p>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
 </body>
 </html>
